--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 .container {
-    max-width: 600px;
+    max-width: 800px;
     margin: 50px auto;
     padding: 20px;
     background-color: #1e1e1e;
@@ -16,7 +16,30 @@ body {
     overflow: hidden;
     animation: fadeIn 1s ease-in-out;
 }
-
+header{
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    margin-bottom: 20px;
+}
+header h1 {
+    font-size: x-large;
+}
+header img{
+    width:55px;
+    height: 50px;
+    transform: scale(1.2);
+    margin-top: 4px;
+}
+header div{
+    border-radius: 50%;
+    overflow: hidden;
+    /* background:red; */
+}
+header img:hover{
+    transform: scale(1.3);
+    transition: 1s all;
+}
 h1, h3, h4, h5 {
     text-align: center;
     margin-bottom: 20px;
