Index page Ui update

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,19 +25,15 @@ header{
 header h1 {
     font-size: x-large;
 }
-header img{
-    width:55px;
-    height: 50px;
-    transform: scale(1.2);
-    margin-top: 4px;
-}
-header div{
+header i{
+    color: white;
+    font-size: x-large;
+    padding: 14px;
+    background:#282828;
     border-radius: 50%;
-    overflow: hidden;
-    /* background:red; */
 }
-header img:hover{
-    transform: scale(1.3);
+header i:hover{
+    background: #000;
     transition: 1s all;
 }
 h1, h3, h4, h5 {
@@ -76,6 +72,51 @@ h4 a:hover {
     border: 1px solid #e68900;
     padding: 10px;
     border-radius: 8px;
+}
+
+.btn-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.calbtn {
+    display: flex;   
+    border: 1px solid rgba(255, 166, 0, 0.425); 
+    border-radius: 8px;
+    padding: 5px 5px 0 5px;
+    width: fit-content;
+    max-width: 200px;
+    margin: 20px;
+    transition: 0.6s all;
+}
+.calbtn:hover{
+    box-shadow: 3px 3px 8px rgba(128, 128, 128, 0.345);
+    transform: translateY(-5px);
+}
+.calbtn img{
+    width: 60px;
+}
+.btnsecondsection {
+    margin: 0;
+    padding: 5px;
+}
+.btn-tagname {
+    background: #e68a002c;
+    color: #e68900;
+    padding: 2px 4px 2px 4px;
+    border-radius: 4px;
+    font-weight: 600;
+    font-size: smaller;
+}
+.btn-name {
+    margin: 0;
+    font-size: small;
+    margin-top: 15px;
+}
+a {
+    text-decoration: none;
 }
 
 .form-group {
@@ -133,6 +174,15 @@ button:hover {
     display: block; background-color: #00ff00; border-radius: 8px; padding-top: 8px; padding-bottom: 8px; font-weight: bold; font-size: larger; color: black;
 }
 
+.note{
+    background: rgba(255, 0, 0, 0.114);
+    border: 2px solid rgba(255, 0, 0, 0.219);
+    margin: 20px;
+}
+.note p{
+    font-size: smaller;
+    text-align: center;
+}
 .tagname {
     background: #e68a004e;
     color: #e68900;
@@ -150,7 +200,20 @@ button:hover {
         margin: 20px auto;
         padding: 15px;
     }
-
+    .calbtn {
+        padding: 5px 5px 0 5px;
+        /* width: fit-content; */
+        width: 132px;
+        margin: 7px;
+    }
+    .btn-tagname {
+        font-size: xx-small;
+    }
+    .btn-name {
+        text-align: left;
+        font-size: x-small;
+        margin-top: 10px;
+    }
     input[type="number"] {
         font-size: 14px;
     }
