--- a/styles/styles.css
+++ b/styles/styles.css
@@ -178,6 +178,9 @@ button:hover {
     background: rgba(255, 0, 0, 0.114);
     border: 2px solid rgba(255, 0, 0, 0.219);
     margin: 20px;
+    max-width: 800px;
+    margin: auto;
+    margin-top: 30px;
 }
 .note p{
     font-size: smaller;
@@ -195,10 +198,14 @@ button:hover {
 }
 
 @media (max-width: 600px) {
+    body{
+        background-color: #1e1e1e;
+    }
     .container {
         width: 90%;
         margin: 20px auto;
         padding: 15px;
+        box-shadow: none;
     }
     .calbtn {
         padding: 5px 5px 0 5px;
@@ -232,5 +239,9 @@ button:hover {
 
     label {
         margin-bottom: 5px;
+    }
+    .note{
+        margin-left: 20px;
+        margin-right: 20px;
     }
 }
