--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,13 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #121212;
     color: #f4f4f4;
     margin: 0;
     padding: 0;
 }
 
 .container {
-    max-width: 800px;
-    margin: 50px auto;
+    max-width: 100%;
+    margin: 0px auto;
     padding: 20px;
     background-color: #1e1e1e;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
