--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,6 +39,18 @@ h1, h3, h4, h5 {
     margin-bottom: 20px;
     color: #f4f4f4;
 }
+.title {
+    position: relative;
+}
+.title::after{
+    content: "Where Smart Calculations Begin";
+    position: absolute;
+    font-size: 8px;
+    top: 100%;
+    left: 2%;
+    margin-top: 4px;
+    color: grey;
+}
 h5 a{
     text-decoration: none;
     color: rgb(238, 195, 96);
